log
Fri, Mar 21, 2025  2:49:24 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  3:05:23 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|4
total_score: 10/70
8ae3602
Fri, Mar 21, 2025  3:07:59 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:4: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
    if (L = NULL) return 0;
    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
e70c4a6
